Delete bunch of css

--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -14,138 +14,9 @@ body.devise {
     }
 }
 
-body:not(.namespace-.controller-insiders):not(.namespace-.controller-premium) {
-    --exercism-link-filter: var(--textColor1-filter);
-}
-
 body.keyboard-navigation .nav-element:hover .nav-element-dropdown,
 body.keyboard-navigation .nav-element:hover .arrow {
-    display: none !important;
-}
-
-body.namespace-.controller-insiders,
-body.namespace-.controller-premium {
-    #site-header {
-        /* russianViolet is site-header background */
-        @apply bg-russianViolet border-[#433F56];
-        .c-icon:not(button .c-icon),
-        .user-menu .c-icon {
-            @apply filter-aliceBlue;
-        }
-
-        a:not(a.announcement-bar) {
-            @apply text-gray;
-        }
-
-        .announcement-bar {
-            @apply bg-vividPurple;
-        }
-
-        .explore-menu {
-            @apply bg-russianViolet text-aliceBlue;
-            @apply shadow-none;
-            .c-icon {
-                @apply filter-aliceBlue;
-            }
-        }
-        .user-menu-dropdown,
-        .c-notifications-dropdown ul,
-        .c-reputation-dropdown ul,
-        .explore-menu-dropdown {
-            box-shadow: 0px 2px 4px #0f0923;
-            @apply bg-russianViolet shadow-lg rounded-8;
-
-            .info {
-                .name {
-                    @apply text-aliceBlue;
-                }
-                .handle {
-                    @apply text-gray;
-                }
-            }
-
-            li.opt a,
-            .notification,
-            .token,
-            .c-prominent-link {
-                @apply bg-russianViolet;
-                &:hover {
-                    background-color: #3a3557;
-                }
-            }
-
-            .c-prominent-link {
-                color: var(--c-prominent-link-color);
-                .c-icon {
-                    filter: var(--c-prominent-link-icon-filter);
-                }
-            }
-
-            .notification {
-                .text {
-                    @apply text-aliceBlue;
-                }
-
-                .created-at {
-                    @apply text-gray;
-                }
-            }
-
-            .c-reputation {
-                @apply bg-eerieBlack text-gray border-lightGray shadow-none;
-                .c-icon {
-                    @apply filter-gray;
-                }
-            }
-            .earned-on {
-                @apply text-gray;
-            }
-            .description {
-                @apply text-aliceBlue;
-            }
-
-            .notification .icon {
-                @apply filter-aliceBlue;
-            }
-        }
-        .auth-buttons {
-            a:first-child {
-                @apply text-aliceBlue;
-            }
-            a:last-child {
-                @apply bg-darkBlueViolet text-blueViolet border-blueViolet;
-            }
-        }
-        .new-badge {
-            background-image: url("icons/new-badge-dark.svg");
-        }
-        .new-testimonial {
-            background-image: url("icons/new-testimonial-dark.svg");
-        }
-
-        .c-notification {
-            background: theme(colors.eerieBlack);
-            box-shadow: 0px 4px 24px rgba(89, 210, 174, 0.4);
-
-            .--count {
-                @apply text-eerieBlack bg-seafoamGreen;
-            }
-            .c-icon {
-                @apply filter-notificationBellDark;
-            }
-        }
-
-        .--notification {
-            @apply bg-russianViolet;
-            &:after {
-                @apply bg-seafoamGreen;
-            }
-        }
-    }
-
-    .user-menu-dropdown li.site-link.donate:after {
-        @apply !border-textColor6;
-    }
+    @apply !hidden;
 }
 
 #site-header {
@@ -189,12 +60,12 @@ body.namespace-.controller-premium {
     & .exercism-link {
         /* todo remove this */
         @apply flex items-center gap-6;
-        filter: var(--exercism-link-filter);
         @apply mr-32 flex-shrink-0;
         @apply max-w-[45px] sm:max-w-[unset] lg:max-w-[32px] xl:max-w-[unset];
         overflow: hidden;
 
         & .c-icon {
+            @apply filter-textColor1;
             height: 35px;
             width: 194px;
         }
