--- a/app/views/layouts/nav/premium.html.haml
+++ b/app/views/layouts/nav/premium.html.haml
@@ -1,5 +1,5 @@
 = link_to premium_path do
-  .bg-darkBlueViolet.flex.flex-col.px-24.pt-20.pb-24.theme-dark.rounded-8
+  .bg-darkBlueViolet.flex.flex-col.px-24.pt-20.pb-24.theme-dark
     = graphical_icon :premium, css_class: "w-[48px] h-[48px] mb-16"
     %h2.text-h3.mb-2{ class: '!text-white' } Exercism Premium
     %p.text-h6.mb-20{ class: '!text-white' } Supercharge your Exercism Experience!
