--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -1,5 +1,5 @@
 #page-insiders
-  = render ReactComponents::Modals::WelcomeInsidersModal.new
+  = render ReactComponents::Modals::WelcomeToInsidersModal.new
   .lg-container
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
