Remove update from PremiumSubscription for now

--- a/app/views/settings/premium.html.haml
+++ b/app/views/settings/premium.html.haml
@@ -18,7 +18,7 @@
                 Support
                 = link_to "our mission", about_path, class: "text-a-subtle"
                 to help everyone get better at programming.
-              = link_to "Find out more", donate_path, class: "btn-primary btn-s"
+              = link_to "Find out more", premium_path, class: "btn-primary btn-s"
 
 
 
