--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -653,16 +653,9 @@ body.namespace-.controller-premium.theme-light,
     --c-concept-map-line-faded: #d2ddf3;
 }
 
-.theme-accessibility-dark {
+.theme-sepia {
     @inline .theme-light;
-    filter: invert(100%) hue-rotate(180deg);
-    background-color: #222;
-
-    img,
-    video,
-    iframe {
-        filter: invert(100%) hue-rotate(180deg);
-    }
+    filter: sepia(1);
 }
 
 @media (prefers-color-scheme: dark) {
