--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -34,7 +34,7 @@ body.keyboard-navigation .nav-element:hover .arrow {
         background: var(--backgroundColorAnnouncementBar);
         & strong {
             @apply text-lightGold mx-4 font-semibold;
-            @apply underline;
+            /* @apply underline; */
         }
 
         .lg-container {
