--- a/app/css/components/nav-bar.css
+++ b/app/css/components/nav-bar.css
@@ -91,7 +91,7 @@
             --dropdown-offset: 0px;
             --nd-ul-width: 320px;
             --nd-view-width: 420px;
-            --nd-height: 380px;
+            --nd-height: 465px;
             --nd-width: calc(var(--nd-ul-width) + var(--nd-view-width));
 
             height: var(--nd-height);
@@ -161,7 +161,7 @@
                 li {
                     @apply pr-8 w-100;
                     .nav-dropdown-view {
-                        @apply absolute hidden py-20 px-24 rounded-8;
+                        @apply absolute hidden rounded-8;
                         background: var(--nav-highlightColor);
                         height: var(--nd-height);
                         top: var(--nd-height);
