--- a/app/views/components/footer/shared.html.haml
+++ b/app/views/components/footer/shared.html.haml
@@ -1,3 +1,8 @@
+631AFF
+2A14AF
+7560F4
+
+
 .lg-container
   - if user_signed_in?
     .nfp.mb-40.md:mb-58
@@ -32,10 +37,8 @@
         %h3 Get involved
         %hr.c-divider.--small
         %ul
-          %li
-            = link_to insiders_path, class: 'flex items-center gap-6' do
-              %span Insiders
-              = graphical_icon "insiders", css_class: 'w-[20px] h-[20px]'
+          %li= link_to "Exercism Insiders", insiders_path
+          %li= link_to "Exercism Premium", premium_path
           %li= link_to "Contribute", contributing_root_path
           %li= link_to "Mentor", mentoring_path
           %li= link_to "Donate", donate_path
