--- a/app/views/tracks/show/_mentoring_article.html.haml
+++ b/app/views/tracks/show/_mentoring_article.html.haml
@@ -27,19 +27,20 @@
             .bar{ style: "width: #{user_track.percentage_to_next_mentoring_slot}%" }
             .unlock-icon
               = icon "unlock", "Unlocked"
-        .info
-          = link_to doc_path(:using, "product/reputation"), class: "explanation" do
-            = graphical_icon "info-circle", css_class: "filter-textColor6"
-            How does this work?
-          - unless user_track.repo_for_next_mentoring_slot.nil?
+
+        - unless user_track.repo_for_next_mentoring_slot.nil?
+          .info
             .next-slot
               Next slot unlocks at
-              %strong #{number_with_delimiter user_track.repo_for_next_mentoring_slot} rep
-        - unless current_user.premium?
-          .flex.items-center.leading-160.mt-8
-            Sign up to&nbsp;
-            = link_to 'Premium', premium_index_path, class: 'text-prominentLinkColor font-semibold'
-            &nbsp;to unlock all mentoring slots
+              %strong #{number_with_delimiter user_track.repo_for_next_mentoring_slot} rep.
+
+          .info
+            .next-slot
+              Or
+              = link_to 'Upgrade to Premium', premium_path, class: 'text-prominentLinkColor font-semibold'
+              to unlock all mentoring slots.
+
+              = link_to "Learn More.", doc_path(:using, "product/reputation"), class: 'font-semibold'
 
   .lg-container.container
     .slots
