Lots of little tweaks

--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -1,6 +1,6 @@
 #page-insiders
   .lg-container
-    .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
+    .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64.pt-20.md:pt-48.pb-64
       .top-lhs
         %h1.text-h1.flex.items-center.gap-12.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
           Exercism Insiders
