--- a/app/views/premium/show.html.haml
+++ b/app/views/premium/show.html.haml
@@ -6,7 +6,7 @@
         .top-lhs
           %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
             Exercism Premium
-            = graphical_icon "insiders", css_class: 'h-[32px] md:h-[64px] w-[32px] md:w-[64px]'
+            = graphical_icon "premium", css_class: 'h-[32px] md:h-[64px] w-[32px] md:w-[64px]'
           %p.text-h3.mb-24
             Enjoy your enhanced experience!
           %p.text-p-xlarge.mb-12
@@ -19,7 +19,7 @@
 
         .top-rhs
           .c-youtube-container
-            %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/WDUqfCMbh_8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+            %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/6BTwBNmmxzs", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
   .gradient-container.py-64
     .lg-container
