--- a/app/views/community/videos/_rhs.html.haml
+++ b/app/views/community/videos/_rhs.html.haml
@@ -37,13 +37,14 @@
         = image_tag featured_event.thumbnail_url, class: 'block w-fill'
 
 - if scheduled_events.present?
-  .mb-24
+  .border-1.border-gradient-lightPurple.px-16.py-12.rounded-8.mb-24
     %h2.text-h4.mb-4 Upcoming Streaming Schedule
-    %p.text-p-base.mb-12
-      This schedule is regularly updated. All events will stream on our
-      = link_to "Twitch Channel", 'https://twitch.tv/exercismlive', class: 'underline'
-      \- subscribe so not to miss out!
-      %strong.font-semibold All times in UTC.
+    %p.text-p-base.mb-4
+      This schedule is regularly updated. All events stream on our
+      = succeed('.') do
+        = link_to "Twitch Channel", 'https://twitch.tv/exercismlive', class: 'underline'
+      Subscribe and don't miss out!
+    %p.text-p-base.mb-12 All times are in UTC.
 
     %ul.text-p-base.list-disc.pl-16
       - scheduled_events.each do |event|
