--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -6,14 +6,13 @@
           Exercism Insiders
           = graphical_icon "insiders", css_class: 'h-[32px] md:h-[60px] w-[32px] md:w-[60px]'
         %h3.text-h3.mb-16 Our way of saying thank you.
-        -# %h5.launching Launching May 4th 2023
         %p.text-p-xlarge.mb-24 Insiders is our exclusive reward program for contributors, mentors, and large donors. Get behind the scenes access, exclusive badges, and Exercism Premium for free.
         - if current_user.present?
           = render ReactComponents::Insiders::InsidersStatus.new
 
       .top-rhs
         .c-youtube-container
-          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/8onnSv5r9Hw", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/iwhahd41h0A", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
     %h2.text-h2.mb-32 Insider Features
     .features
