--- a/app/views/settings/donations.html.haml
+++ b/app/views/settings/donations.html.haml
@@ -19,7 +19,7 @@
                 to help everyone get better at programming.
               = link_to "Find out more", donate_path, class: "btn-primary btn-s"
 
-        - if current_user.current_active_donation_subscription
+        - if current_user.total_donated_in_dollars.positive?
           - dollars, cents = current_user.total_donated_in_dollars.to_s.split('.')
           .summary-box.flex.flex-col.lg:flex-row.items-center
             .values.flex.items-center
