--- a/app/views/settings/premium.html.haml
+++ b/app/views/settings/premium.html.haml
@@ -10,6 +10,16 @@
           .flex.flex-col.items-start
             - if current_user.current_active_premium_subscription
               = render ReactComponents::Donations::PremiumSubscriptionForm.new
+            - elsif current_user.insider?
+              %h2 You are an Exercism Premium member
+              %p.text-p-base.mb-8
+                - if current_user.lifetime_insider?
+                  As an Exercism Lifetime Insider, you automatically get Exercism Premium for free forever.
+                  Thank you for the significant contribution(s) you have made in supporting Exercism 💙
+                - else
+                  As an Exercism Insider you automatically get Exercism Premium for free, for as long as you are an Exercism Insider.
+                  Should you cease to be an insider, you will be able to resubscribe to Premium through the main Premium page.
+                  Thank you for supporting Exercism 💙
             - else
               -# TODO: update copy
               %h2 Join Exercism Premium
@@ -19,8 +29,6 @@
                 = link_to "our mission", about_path, class: "text-a-subtle"
                 to help everyone get better at programming.
               = link_to "Find out more", premium_path, class: "btn-primary btn-s"
-
-
 
         - if current_user.current_active_premium_subscription
           %table.payments
@@ -46,7 +54,7 @@
                     = link_to payment.external_receipt_url, class: 'btn-enhanced btn-xs' do
                       = graphical_icon "download"
                       %span View Receipt
-        - else
+        - elsif !current_user.insider?
           .summary-box
             %h3.text-h5.mb-4 Your premium payments will appear here
             %p.text-p-base.mb-4
