Premium - iHiD Tweaks (#5486)
* Fix test name

* Fix stuff

* WIP top menu

* Fix two test issues

* Work on the Premium payment modal

* Keep chipping away

* Fix locked bg color

* Update mentoring article

Update margin

Add conditional

* Tweak layout of mentoring slots

* Lots of little tweaks

* Add videos page

* Add video pages

* Final menu tweaks

* Revert all schema changes

* Try and fix schema

* Revert temporary change

* Fix typo

* Fix failing mentoring slot tests

* Fix nil error

* Minor naming refactoring

* Fix canceling of subscription having grace period

* Reduce from 5 to 3 tracks in nav

* Add donate modal on Insiders (#5493)

* Change event you listen to (#5491)

* WIP Nonsense (#5494)

* WIP Nonsense

* More nonsense that Erik has to deal with

* More stuff

* More stuff

* Fix tests

* Fix more tests

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Aron Demeter <66035744+dem4ron@users.noreply.github.com>

--- a/app/css/components/nav-bar.css
+++ b/app/css/components/nav-bar.css
@@ -91,7 +91,7 @@
             --dropdown-offset: 0px;
             --nd-ul-width: 320px;
             --nd-view-width: 420px;
-            --nd-height: 380px;
+            --nd-height: 465px;
             --nd-width: calc(var(--nd-ul-width) + var(--nd-view-width));
 
             height: var(--nd-height);
@@ -142,8 +142,7 @@
                     @apply pr-0;
                 }
                 .nav-dropdown-element {
-                    @apply gap-20;
-                    @apply pr-40;
+                    @apply gap-16;
                 }
                 .nav-element-link {
                     .c-icon {
@@ -161,7 +160,7 @@
                 li {
                     @apply pr-8 w-100;
                     .nav-dropdown-view {
-                        @apply absolute hidden py-20 px-24 rounded-8;
+                        @apply absolute hidden rounded-8;
                         background: var(--nav-highlightColor);
                         height: var(--nd-height);
                         top: var(--nd-height);
@@ -195,6 +194,9 @@
                             white-space: nowrap;
                             overflow: hidden;
                             text-overflow: ellipsis;
+                        }
+                        .c-icon.external-icon {
+                            @apply w-[16px] h-[16px] ml-auto;
                         }
                     }
                     .nav-element-link {
