--- a/app/views/layouts/nav/journey.html.haml
+++ b/app/views/layouts/nav/journey.html.haml
@@ -1,1 +1,13 @@
-JOURNEY
+#journey-view
+  .journey-contents
+    .content
+      = graphical_icon "reputation"
+      %span Reputation
+    .content
+      = graphical_icon "badges"
+      %span Badges
+    .content
+      = graphical_icon "code-history"
+      %span History
+    .content
+      %span And more...
