Small tweaks on joining flow

--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -24,9 +24,9 @@
 
     %p.text-p-large.text-center.pb-56 (And even more coming soon!)
 
-  .gradient-container.faqs.pb-56
+  .gradient-container.faqs.py-56
     .lg-container
-      %h2.text-h1.mb-40 The Nitty Gritty &amp; FAQs
+      %h2.text-h1.mb-40.text-center The Nitty Gritty &amp; FAQs
       .flex.flex-col.gap-24.mx-auto{ class: "max-w-[940px]" }
         %details{ open: true }
           %summary What are the exact criteria for Insiders access?
